--- a/index.html
+++ b/index.html
@@ -1,96 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Webpage with Instagram Link and Calculator</title>
+    <title>Popocatépetl Introduction</title>
     <style>
-        /* Simple CSS to style the calculator */
-        #calculator {
-            margin: 20px;
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
             padding: 20px;
-            border: 1px solid #ddd;
         }
-        input, button {
-            margin: 5px;
+        img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+        }
+        .content {
+            max-width: 800px;
+            margin: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Webpage</h1>
-    <p>Check out my Instagram: <a href="https://www.instagram.com/andy.mayr" target="_blank">andy.mayr</a></p>
-
-    <div id="calculator">
-        <input type="text" id="display" disabled>
-        <br>
-        <button onclick="appendNumber('1')">1</button>
-        <button onclick="appendNumber('2')">2</button>
-        <button onclick="appendNumber('3')">3</button>
-        <button onclick="setOperation('+')">+</button>
-        <br>
-        <button onclick="appendNumber('4')">4</button>
-        <button onclick="appendNumber('5')">5</button>
-        <button onclick="appendNumber('6')">6</button>
-        <button onclick="setOperation('-')">-</button>
-        <br>
-        <button onclick="appendNumber('7')">7</button>
-        <button onclick="appendNumber('8')">8</button>
-        <button onclick="appendNumber('9')">9</button>
-        <button onclick="setOperation('*')">*</button>
-        <br>
-        <button onclick="calculate()">=</button>
-        <button onclick="appendNumber('0')">0</button>
-        <button onclick="clearDisplay()">C</button>
-        <button onclick="setOperation('/')">/</button>
+    <div class="content">
+        <h1>Welcome to Popocatépetl</h1>
+        <img src="path_to_your_image.jpg" alt="Popocatépetl">
+        <p>
+            Popocatépetl is one of Mexico's most active volcanoes and the second-highest peak in the country, 
+            located in the states of Puebla, Mexico, and Morelos. This majestic volcano has played a significant 
+            role in the cultural and mythological history of the region.
+        </p>
+        <!-- Add more information about Popocatépetl here -->
     </div>
-
-    <script>
-        let display = document.getElementById('display');
-        let operation = null;
-        let firstNumber = '';
-        let secondNumber = '';
-
-        function appendNumber(number) {
-            if (operation === null) {
-                firstNumber += number;
-                display.value = firstNumber;
-            } else {
-                secondNumber += number;
-                display.value = secondNumber;
-            }
-        }
-
-        function setOperation(op) {
-            operation = op;
-            display.value = '';
-        }
-
-        function clearDisplay() {
-            firstNumber = '';
-            secondNumber = '';
-            operation = null;
-            display.value = '';
-        }
-
-        function calculate() {
-            firstNumber = parseFloat(firstNumber);
-            secondNumber = parseFloat(secondNumber);
-            switch (operation) {
-                case '+':
-                    display.value = firstNumber + secondNumber;
-                    break;
-                case '-':
-                    display.value = firstNumber - secondNumber;
-                    break;
-                case '*':
-                    display.value = firstNumber * secondNumber;
-                    break;
-                case '/':
-                    display.value = firstNumber / secondNumber;
-                    break;
-            }
-            firstNumber = display.value;
-            secondNumber = '';
-            operation = null;
-        }
-    </script>
 </body>
 </html>
