--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">La Tecnologia Laser<br><span>En</span> La Medicina</h1>
+      <h1 class="mb-4 pb-0">La Tecnología Láser<br><span>En</span> La Medicina</h1>
+      <p class="mb-4 pb-0">Curso</p>
       <p class="mb-4 pb-0">10-12 December, Downtown Conference Center, New York</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
