--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">La Tecnología Láser<br><span>En</span> La Medicina</h1>
-      <p class="mb-4 pb-0">Curso</p>
-      <p class="mb-4 pb-0">10-12 December, Downtown Conference Center, New York</p>
+      <p class="mb-4 pb-0">Curso Teórico Práctico</p>
+      <p class="mb-4 pb-0">Curso 26 y 27 de Abril 2024 en el Auditorio del Hospital MAC Puebla</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
@@ -112,7 +112,7 @@
     <section id="speakers" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Event Speakers</h2>
+          <h2>Ponentes invitados</h2>
           <p>Here are some of our speakers</p>
         </div>
 
@@ -121,7 +121,7 @@
             <div class="speaker">
               <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Brenden Legros</a></h3>
+                <h3><a href="speaker-details.html">Dr Pedro Antonio Martinez Campo</a></h3>
                 <p>Quas alias incidunt</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -136,7 +136,7 @@
             <div class="speaker">
               <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
+                <h3><a href="speaker-details.html">Dra. Maria Pilar Martín Santiago : Curriculum</a></h3>
                 <p>Consequuntur odio aut</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -166,7 +166,7 @@
             <div class="speaker">
               <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
+                <h3><a href="speaker-details.html">Dra. María Patricia Ramos</a></h3>
                 <p>Debitis iure vero</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -181,7 +181,7 @@
             <div class="speaker">
               <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
+                <h3><a href="speaker-details.html">Dra. Flor Arriaga Lila</a></h3>
                 <p>Qui molestiae natus</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -196,7 +196,7 @@
             <div class="speaker">
               <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
+                <h3><a href="speaker-details.html">Andreitas Mayer, como no? Doctor en la vida 😄</a></h3>
                 <p>Non autem dicta</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -219,18 +219,18 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Event Schedule</h2>
-          <p>Here is our event schedule</p>
+          <p>Esta es nuestra Agenda</p>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Dia 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
+            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Dia 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>
+            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Dia 3</a>
           </li>
         </ul>
 
