--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" title=""></a>
+        El futuro esta en tus manos
+        <a href="#intro" class="scrollto"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
