--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
   <header id="header">
     <div class="container">
 
-      <div id="logo" class="pull-left">
-        El futuro esta en tus manos
-        <a href="#intro" class="scrollto"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="" title=""></a>
-      </div>
+   <div id="logo" style="display: flex; align-items: center; justify-content: left;">
+    <a href="#intro" class="scrollto">
+        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="" style="max-width: 100px; max-height: 100px; margin-right: 10px;">
+    </a>
+    <div>
+        <span style="font-size: 1.2em; font-weight: bold;">El futuro está en tus manos</span>
+    </div>
+</div>
+
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
