--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
         <div class="row no-gutters">
           <div class="col-lg-6 venue-map">
-            <iframe src="https://www.google.com/maps/place/Hospital+MAC+Puebla/@19.0206838,-98.2645128,15z/data=!4m6!3m5!1s0x85cfc79dffeb520b:0xf177c9ecea2a0896!8m2!3d19.0206838!4d-98.2645128!16s%2Fg%2F11g6pwr_4j?entry=ttu" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://maps.app.goo.gl/WHwdNCZCtkRozHt79" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
 
           <div class="col-lg-6 venue-info">
