--- a/index.html
+++ b/index.html
@@ -486,10 +486,21 @@
           <p>Event venue location info and gallery</p>
         </div>
 
-        <div class="row no-gutters">
-          <div class="col-lg-6 venue-map">
-            <iframe src="https://maps.app.goo.gl/WHwdNCZCtkRozHt79" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
+    <div class="row no-gutters">
+    <div class="col-lg-6 venue-map">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1dXXXXX!2dXXXXX!3dXXXXX!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xXXXXX%3A0xXXXXX!2sLocation+Name!5e0!3m2!1sen!2s!4vXXXXXXXXXXXX" 
+            frameborder="0" 
+            style="border:0" 
+            allowfullscreen="" 
+            aria-hidden="false" 
+            tabindex="0"
+            width="100%" 
+            height="450">
+        </iframe>
+    </div>
+</div>
+
 
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
