--- a/index.html
+++ b/index.html
@@ -486,11 +486,19 @@
           <p>Event venue location info and gallery</p>
         </div>
 
-    <div class="row no-gutters">
-  <div class="row no-gutters">
-          <div class="col-lg-6 venue-map">
-            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15087.912660199496!2d-98.2645128!3d19.0206838!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc79dffeb520b%3A0xf177c9ecea2a0896!2sHospital%20MAC%20Puebla!5e0!3m2!1ses-419!2smx!4v1705565313211!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
+   <div class="row no-gutters">
+    <div class="col-lg-6 venue-map">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15087.912660199496!2d-98.2645128!3d19.0206838!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc79dffeb520b%3A0xf177c9ecea2a0896!2sHospital%20MAC%20Puebla!5e0!3m2!1ses-419!2smx!4v1705565313211!5m2!1ses-419!2smx" 
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</div>
 
 
           <div class="col-lg-6 venue-info">
