--- a/speaker-details.html
+++ b/speaker-details.html
@@ -85,18 +85,29 @@
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Brenden Legros</h2>
+              <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
+              <p>Director. IMC-Investiláser S.L.U. (2003 – Actualidad)
+                C/ Sarret, 13. 08205 Sabadell (Barcelona)
+                Tel. 93.727.18.85 / 660.52.72.96
+                 www.investilaser.com
+                  pmc@investilaser.com   </p>
  
-              <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p> 
+              <p>Doctor in Medicine and Surgery from the University of Barcelona, Specialist in Clinical
+Biochemistry and Molecular Pathology (MIR), Specialist in Family and Community
+Medicine (ECOE), with officially registered degrees in the European Union. Doctoral courses
+and pre-thesis in the Department of Pharmacology at the Autonomous University of
+Barcelona</p> 
 
-              <p>Et dolore blanditiis officiis non quod id possimus. Optio non commodi alias sint culpa sapiente nihil ipsa magnam. Qui eum alias provident omnis incidunt aut. Eius et officia corrupti omnis error vel quia omnis velit. In qui debitis autem aperiam voluptates unde sunt et facilis.</p>
+              <p>Doctoral pre-thesis conducted in the Clinical Trials Unit of the Municipal Institute
+of Medical Research (IMIM) in Barcelona. Expert in Clinical Trials and Methodology and
+Communication of Scientific Research. My main activity since 1994 has been clinical
+research in patients in various medical specialties.</p>
             </div>
           </div>
           
