--- a/speaker-details.html
+++ b/speaker-details.html
@@ -72,49 +72,34 @@
       Speaker Details Section
     ============================-->
     <section id="speakers-details" class="wow fadeIn">
-      <div class="container">
-        <div class="section-header">
-          <h2>Speaker Details</h2>
-          <p>Praesentium ut qui possimus sapiente nulla.</p>
-        </div>
+  <div class="container">
+    <div class="section-header">
+      <h2>Speaker Details</h2>
+      <p>Keynote speaker profile and achievements.</p>
+    </div>
 
-        <div class="row">
-          <div class="col-md-6">
-            <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-          </div>
-
-          <div class="col-md-6">
-            <div class="details">
-              <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-              <p>Director. IMC-Investiláser S.L.U. (2003 – Actualidad)
-                C/ Sarret, 13. 08205 Sabadell (Barcelona)
-                Tel. 93.727.18.85 / 660.52.72.96
-                 www.investilaser.com
-                  pmc@investilaser.com   </p>
- 
-              <p>Doctor in Medicine and Surgery from the University of Barcelona, Specialist in Clinical
-Biochemistry and Molecular Pathology (MIR), Specialist in Family and Community
-Medicine (ECOE), with officially registered degrees in the European Union. Doctoral courses
-and pre-thesis in the Department of Pharmacology at the Autonomous University of
-Barcelona</p> 
-
-              <p>Doctoral pre-thesis conducted in the Clinical Trials Unit of the Municipal Institute
-of Medical Research (IMIM) in Barcelona. Expert in Clinical Trials and Methodology and
-Communication of Scientific Research. My main activity since 1994 has been clinical
-research in patients in various medical specialties.</p>
-            </div>
-          </div>
-          
-        </div>
+    <div class="row">
+      <div class="col-md-6">
+        <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
       </div>
 
-    </section>
+      <div class="col-md-6">
+        <div class="details">
+          <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
+          <div class="social">
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+          </div>
+          <p>Director of IMC-Investiláser S.L.U. since 2003. Contact: C/ Sarret, 13, 08205 Sabadell, Barcelona, Tel. 93.727.18.85 / 660.52.72.96, <a href="http://www.investilaser.com">www.investilaser.com</a>, pmc@investilaser.com</p>
+          <p>Dr. Martínez Carpio has a distinguished background in Medicine and Surgery from the University of Barcelona, with specializations in Clinical Biochemistry, Molecular Pathology, and Family and Community Medicine. He has extensive experience in clinical research since 1994, focusing on various medical specialties.</p>
+          <p>He has conducted significant research, including pre-thesis work in Pharmacology at the Autonomous University of Barcelona and in the Clinical Trials Unit of the Municipal Institute of Medical Research (IMIM) in Barcelona. His expertise includes Clinical Trials, Methodology, and Communication of Scientific Research.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   </main>
 
