--- a/speaker-details.html
+++ b/speaker-details.html
@@ -80,7 +80,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+        <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Speaker 1" class="img-fluid">
       </div>
 
       <div class="col-md-6">
