--- a/speaker-details.html
+++ b/speaker-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Laser en Medicina</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -43,11 +43,14 @@
   <header id="header" class="header-fixed">
     <div class="container">
 
-      <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="index.html#intro" class="scrollto"><img src="img/logo.png" alt="" title=""></a>
-      </div>
+       <div id="logo" style="display: flex; align-items: center; justify-content: left;">
+    <a href="#intro" class="scrollto">
+        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="" style="max-width: 100px; max-height: 100px; margin-right: 10px;">
+    </a>
+    <div>
+        <span style="font-size: 1.2em; font-weight: bold; color: white;">El futuro está en tus manos</span>
+    </div>
+</div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
