--- a/index.html
+++ b/index.html
@@ -55,18 +55,19 @@
 
 
       <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#supporters">Sponsors</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
-        </ul>
+      <ul class="nav-menu">
+    <li class="menu-active"><a href="#intro">Inicio</a></li>
+    <li><a href="#about">Acerca de</a></li>
+    <li><a href="#speakers">Ponentes</a></li>
+    <li><a href="#schedule">Programa</a></li>
+    <li><a href="#venue">Lugar</a></li>
+    <li><a href="#hotels">Hoteles</a></li>
+    <li><a href="#gallery">Galería</a></li>
+    <li><a href="#supporters">Patrocinadores</a></li>
+    <li><a href="#contact">Contacto</a></li>
+    <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
+</ul>
+
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
