--- a/speaker-details.html
+++ b/speaker-details.html
@@ -69,42 +69,66 @@
     </div>
   </header><!-- #header -->
 
-  <main id="main" class="main-page">
+  <style>
+    .speaker-img {
+        width: 100%; /* Ajusta el ancho al 100% del contenedor padre */
+        height: auto; /* Mantiene la proporción de la imagen */
+        max-width: 400px; /* Establece un ancho máximo para las imágenes */
+    }
+</style>
+
+<main id="main" class="main-page">
 
     <!--==========================
       Speaker Details Section
     ============================-->
     <section id="speakers-details" class="wow fadeIn">
-  <div class="container">
-    <div class="section-header">
-      <h2>Speaker Details</h2>
-      <p>Keynote speaker profile and achievements.</p>
-    </div>
+        <div class="container">
+            <div class="section-header">
+                <h2>Detalles del ponente</h2>
+                <p>Perfil y logros del ponente principal.</p>
+            </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Speaker 1" class="img-fluid">
-      </div>
+            <!-- Dr. Pedro A. Martínez Carpio -->
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Speaker 1" class="img-fluid speaker-img">
+               </div>
+                <div class="col-md-6">
+                    <div class="details">
+                        <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
+                        <div class="social">
+                            <!-- Social media icons (if any) -->
+                        </div>
+                        <p>Director de IMC-Investiláser S.L.U. desde 2003. Contacto: C/ Sarret, 13, 08205 Sabadell, Barcelona, Tel. 93.727.18.85 / 660.52.72.96, <a href="http://www.investilaser.com">www.investilaser.com</a>, pmc@investilaser.com</p>
+                        <p>El Dr. Martínez Carpio posee una destacada trayectoria en Medicina y Cirugía por la Universidad de Barcelona, especializado en Bioquímica Clínica, Patología Molecular y Medicina Familiar y Comunitaria. Tiene una amplia experiencia en investigación clínica desde 1994, enfocándose en diversas especialidades médicas.</p>
+                        <p>Ha realizado investigaciones significativas, incluyendo trabajos pre-tesis en Farmacología en la Universidad Autónoma de Barcelona y en la Unidad de Ensayos Clínicos del IMIM en Barcelona. Su experiencia incluye Ensayos Clínicos, Metodología y Comunicación de la Investigación Científica.</p>
+                    </div>
+                </div>
+                        </div>
 
-      <div class="col-md-6">
-        <div class="details">
-          <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
-          <div class="social">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-          </div>
-          <p>Director of IMC-Investiláser S.L.U. since 2003. Contact: C/ Sarret, 13, 08205 Sabadell, Barcelona, Tel. 93.727.18.85 / 660.52.72.96, <a href="http://www.investilaser.com">www.investilaser.com</a>, pmc@investilaser.com</p>
-          <p>Dr. Martínez Carpio has a distinguished background in Medicine and Surgery from the University of Barcelona, with specializations in Clinical Biochemistry, Molecular Pathology, and Family and Community Medicine. He has extensive experience in clinical research since 1994, focusing on various medical specialties.</p>
-          <p>He has conducted significant research, including pre-thesis work in Pharmacology at the Autonomous University of Barcelona and in the Clinical Trials Unit of the Municipal Institute of Medical Research (IMIM) in Barcelona. His expertise includes Clinical Trials, Methodology, and Communication of Scientific Research.</p>
+            <!-- Dra. Pilar Martín -->
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Speaker 2" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <div class="details">
+                        <h2>Dra. Pilar Martín (M.D., D.D.S.)</h2>
+                        <div class="social">
+                            <!-- Social media icons (if any) -->
+                        </div>
+                        <p>Estudió Medicina, Cirugía y Odontología en la Universidad de La Laguna (España) y Universidad Odontológica Dominicana. Especializada en Ortodoncia y Odontología Cosmética, con Máster en Implantología, Cirugía, Periodoncia y Prótesis, y en Salud Pública. Máster Universitaria en Kinesiología Médica Odontológica y Posturología Clínica.</p>
+                        <p>En 2010 obtuvo un Máster Europeo en aplicaciones dentales del láser en la Universidad de Barcelona y en 2016 un Máster en Ciencias en Láseres en Odontología en la Universidad de Aquisgrán RWHT. Profesora en la Universidad de Valencia, conferencista internacional con publicaciones y libros sobre Odontología Integrativa.</p>
+                    </div>
+
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-  </main>
+</main>
+
 
 
   <!--==========================
@@ -117,7 +141,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="img/logo.png" alt="TheEvenet">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <p>Derechos resrvados con los abogaos.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -145,11 +169,12 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+    Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis, <br>
+    72821 San Bernardino Tlaxcalancingo, Pue.
+</p>
+
+              <strong>Phone:</strong> +52 2222393453<br>
+              <strong>Email:</strong> mayerandreas3@gmail.com<br>
             </p>
 
             <div class="social-links">
