--- a/speaker-details.html
+++ b/speaker-details.html
@@ -126,8 +126,42 @@
             </div>
         </div>
     </section>
+<main id="main" class="main-page">
+
+    <!--==========================
+      Speaker Details Section
+    ============================-->
+    <section id="speakers-details" class="wow fadeIn">
+        <div class="container">
+            <div class="section-header">
+                <h2>Detalles del ponente</h2>
+                <p>Perfil y logros del ponente principal.</p>
+            </div>
+
+            <!-- [Aquí van los detalles de los ponentes anteriores] -->
+
+            <!-- Última Ponente -->
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Speaker 3" class="img-fluid speaker-img">
+                </div>
+                <div class="col-md-6">
+                    <div class="details">
+                        <h2>Dra. Flor Arriaga</h2>
+                        <div class="social">
+                            <!-- Iconos de redes sociales (si los hay) -->
+                        </div>
+                        <p>Egresada de la BUAP como Cirujano Dentista y Especialista en Estomatología Pediátrica. Desarrolla programas de salud oral en el HNP y realiza rotaciones en el Children’s Hospital en Denver, Colorado. Mastership en Odontología Láser por la Universidad RWTH en Aachen, Alemania y certificada en Estomatología Pediátrica Hospitalaria.</p>
+                        <p>Cuenta con diplomados en diversas áreas dentales y realiza una estadía como Odontopediatra clínico en Honduras. Coordinadora Estatal de Estomatología y Jefe del Servicio de Odontología en el ISSSTE Puebla. Directora General de ARMACU. Ha sido Vicepresidente y Presidente de la AOIEP, miembro de varias asociaciones dentales y profesor invitado en la BUAP.</p>
+                        <p>Ha impartido conferencias internacionales sobre odontología láser y participado en medios de comunicación durante más de 20 años.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </main>
+
 
 
 
