--- a/speaker-details.html
+++ b/speaker-details.html
@@ -82,12 +82,14 @@
     <!--==========================
       Speaker Details Section
     ============================-->
+   <main id="main" class="main-page">
     <section id="speakers-details" class="wow fadeIn">
         <div class="container">
             <div class="section-header">
                 <h2>Detalles del ponente</h2>
                 <p>Perfil y logros del ponente principal.</p>
             </div>
+
 
             <!-- Dr. Pedro A. Martínez Carpio -->
             <div class="row">
@@ -128,17 +130,6 @@
     </section>
 <main id="main" class="main-page">
 
-    <!--==========================
-      Speaker Details Section
-    ============================-->
-    <section id="speakers-details" class="wow fadeIn">
-        <div class="container">
-            <div class="section-header">
-                <h2>Detalles del ponente</h2>
-                <p>Perfil y logros del ponente principal.</p>
-            </div>
-
-            <!-- [Aquí van los detalles de los ponentes anteriores] -->
 
             <!-- Última Ponente -->
             <div class="row">
