--- a/index.html
+++ b/index.html
@@ -115,108 +115,53 @@
     <!--==========================
       Speakers Section
     ============================-->
-    <section id="speakers" class="wow fadeInUp">
-      <div class="container">
+   <section id="speakers" class="wow fadeInUp">
+    <div class="container">
         <div class="section-header">
-          <h2>Ponentes invitados</h2>
-          <p>Here are some of our speakers</p>
+            <h2>Ponentes invitados</h2>
+            <p>Here are some of our speakers</p>
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Dr Pedro Antonio Martinez Campo</a></h3>
-                <p>Quas alias incidunt</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+            <!-- Dr. Pedro A. Martínez Carpio -->
+            <div class="col-lg-4 col-md-6">
+                <div class="speaker">
+                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Dr. Pedro A. Martínez Carpio" class="img-fluid">
+                    <div class="details">
+                        <h3><a href="speaker-details.html">Dr. Pedro A. Martínez Carpio</a></h3>
+                        <p>Director de IMC-Investiláser S.L.U.</p>
+                        <!-- Social Media Icons -->
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Dra. Maria Pilar Martín Santiago : Curriculum</a></h3>
-                <p>Consequuntur odio aut</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                <p>Fugiat laborum et</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Dra. María Patricia Ramos</a></h3>
-                <p>Debitis iure vero</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Dra. Flor Arriaga Lila</a></h3>
-                <p>Qui molestiae natus</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-              <div class="details">
-                <h3><a href="speaker-details.html">Andreitas Mayer, como no? Doctor en la vida 😄</a></h3>
-                <p>Non autem dicta</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-    </section>
+            <!-- Dra. Pilar Martín -->
+            <div class="col-lg-4 col-md-6">
+                <div class="speaker">
+                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Dra. Pilar Martín" class="img-fluid">
+                    <div class="details">
+                        <h3><a href="speaker-details.html">Dra. Pilar Martín</a></h3>
+                        <p>Especializada en Ortodoncia y Odontología Cosmética</p>
+                        <!-- Social Media Icons -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Dra. Flor Arriaga -->
+            <div class="col-lg-4 col-md-6">
+                <div class="speaker">
+                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid">
+                    <div class="details">
+                        <h3><a href="speaker-details.html">Dra. Flor Arriaga</a></h3>
+                        <p>Especialista en Estomatología Pediátrica</p>
+                        <!-- Social Media Icons -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <!--==========================
       Schedule Section
