--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p class="mb-4 pb-0">Curso 26 y 27 de Abril 2024 en el Auditorio del Hospital MAC Puebla</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
-      <a href="#about" class="about-btn scrollto">About The Event</a>
+      <a href="#about" class="about-btn scrollto">Acerca del evento</a>
     </div>
   </section>
 
@@ -95,18 +95,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h2>About The Event</h2>
+            <h2>Acerca del evento</h2>
             <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
               accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
               est ut optio sequi unde.</p>
           </div>
           <div class="col-lg-3">
-            <h3>Where</h3>
-            <p>Downtown Conference Center, New York</p>
+            <h3>Donde</h3>
+            <p>Hospital MAC Puebla</p>
           </div>
           <div class="col-lg-3">
-            <h3>When</h3>
-            <p>Monday to Wednesday<br>10-12 December</p>
+            <h3>Cuando</h3>
+            <p>Jueves a Sábado<br>25, 26 y 27 de abril</p>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
     <div class="container">
         <div class="section-header">
             <h2>Ponentes invitados</h2>
-            <p>Here are some of our speakers</p>
+            <p>Estos seran nuestros Ponentes</p>
         </div>
 
         <div class="row">
@@ -169,7 +169,7 @@
     <section id="schedule" class="section-with-bg">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h2>Event Schedule</h2>
+          <h2>Agenda</h2>
           <p>Esta es nuestra Agenda</p>
         </div>
 
@@ -424,112 +424,54 @@
       Venue Section
     ============================-->
     <section id="venue" class="wow fadeInUp">
-
-      <div class="container-fluid">
-
-        <div class="section-header">
-          <h2>Event Venue</h2>
-          <p>Event venue location info and gallery</p>
-        </div>
-
-   <div class="row no-gutters">
-    <div class="col-lg-6 venue-map">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15087.912660199496!2d-98.2645128!3d19.0206838!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc79dffeb520b%3A0xf177c9ecea2a0896!2sHospital%20MAC%20Puebla!5e0!3m2!1ses-419!2smx!4v1705565313211!5m2!1ses-419!2smx" 
-            width="600" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+  <div class="container-fluid">
+    <div class="section-header">
+      <h2>Event Venue</h2>
+      <p>Event venue location info and gallery</p>
     </div>
-</div>
 
-
-          <div class="col-lg-6 venue-info">
-            <div class="row justify-content-center">
-              <div class="col-11 col-lg-8">
-                <h3>Hospital MAC Puebla, Mexico</h3>
-                <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
+    <div class="row no-gutters">
+      <div class="col-lg-6 venue-map">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15087.912660199496!2d-98.2645128!3d19.0206838!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc79dffeb520b%3A0xf177c9ecea2a0896!2sHospital%20MAC%20Puebla!5e0!3m2!1ses-419!2smx!4v1705565313211!5m2!1ses-419!2smx" 
+          width="600" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
 
-      <div class="container-fluid venue-gallery-container">
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/1.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
+      <div class="col-lg-6 venue-info">
+        <div class="row justify-content-center">
+          <div class="col-11 col-lg-8">
+            <h3>Hospital MAC Puebla, Mexico</h3>
+            <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
           </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/2.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/3.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/4.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/4.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/5.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/5.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/7.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="img/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/8.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
         </div>
       </div>
+    </div>
+  </div>
 
-    </section>
+  <div class="container-fluid venue-gallery-container">
+    <div class="row no-gutters">
+      <!-- Gallery items -->
+      <!-- Each gallery item consists of a div with class 'col-lg-3 col-md-4', containing a div with class 'venue-gallery', which in turn contains an anchor and an image. -->
+      <!-- The structure is repeated for each image in the gallery, with the source of the image and the href of the anchor tag changing accordingly. -->
+      <!-- Example of one gallery item: -->
+      <div class="col-lg-3 col-md-4">
+        <div class="venue-gallery">
+          <a href="img/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
+            <img src="img/venue-gallery/1.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+      </div>
+      <!-- Repeat the above block for each image in the gallery, changing the numbers in the href and src attributes accordingly. -->
+    </div>
+  </div>
+</section>
+
 
     <!--==========================
       Hotels Section
