--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>Acerca del evento</h2>
-            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-              accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-              est ut optio sequi unde.</p>
+<p>El potencial transformador de la tecnología láser en medicina es innegable, y va mucho más allá de sus actuales funciones destacadas en cirugía ocular, procedimientos dentales y cirugía general. Invitamos a médicos de diversas especialidades a participar en un esclarecedor curso introductorio que desvela el amplio espectro de aplicaciones que ofrece el láser. Desde la dermatología a la oncología, los láseres exhiben versatilidad, ofreciendo intervenciones precisas con menor pérdida de sangre y tiempos de recuperación más rápidos. Aunque las ventajas son evidentes, reconocer las desventajas garantiza una toma de decisiones informada. Únase a nosotros para explorar cómo la tecnología láser puede revolucionar su consulta, fomentando la colaboración y mejorando los resultados de los pacientes. Aproveche esta oportunidad para mantenerse a la vanguardia de la innovación médica y mejorar su experiencia en diversas disciplinas.</p>
+
           </div>
           <div class="col-lg-3">
             <h3>Donde</h3>
