--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h1 class="mb-4 pb-0">La Tecnología Láser<br><span>En</span> La Medicina</h1>
       <p class="mb-4 pb-0">Curso Teórico Práctico</p>
       <p class="mb-4 pb-0">Curso 26 y 27 de Abril 2024 en el Auditorio del Hospital MAC Puebla</p>
-      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+      <a href="https://www.youtube.com/watch?v=lj2tb7vBaUE" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">Acerca del evento</a>
     </div>
